--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
 
 <title>News</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -152,6 +152,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="style.css" type="text/css" />
 
 
@@ -176,6 +177,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -328,7 +332,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -396,25 +400,34 @@ $(document).ready(function () {
 
 <p> </p>
 <ul>
-<li><strong>October 1</strong> Kerstin starting as PhD student in the lab</li>
+<li><strong>October 1</strong> Kerstin starting as PhD student in the
+lab</li>
 </ul>
 <div id="section" class="section level3">
 <h3>2019</h3>
 <ul>
 <li><strong>November 12</strong> Tom submitted his thesis. Congrats</li>
-<li><strong>September 30</strong> Sophie successfully defended her thesis. Congrats</li>
-<li><strong>September 15 -25</strong> Markus participates in a visit to Beijing, Nanjing and Shanghai presenting work from the lab<br />
+<li><strong>September 30</strong> Sophie successfully defended her
+thesis. Congrats</li>
+<li><strong>September 15 -25</strong> Markus participates in a visit to
+Beijing, Nanjing and Shanghai presenting work from the lab<br />
 </li>
-<li><strong>September 15</strong> Jose presenting a poster at the <a href="https://www.botanikertagung2019.de/">meeting of the German Botanical Society</a><br />
+<li><strong>September 15</strong> Jose presenting a poster at the <a
+href="https://www.botanikertagung2019.de/">meeting of the German
+Botanical Society</a><br />
 </li>
-<li><strong>June 19</strong> Markus Presenting at CEPLAS meeting in Duesseldorf<br />
+<li><strong>June 19</strong> Markus Presenting at CEPLAS meeting in
+Duesseldorf<br />
 </li>
-<li><strong>April 15</strong> Welcome Jose Dias as PhD student in the lab</li>
+<li><strong>April 15</strong> Welcome Jose Dias as PhD student in the
+lab</li>
 <li><strong>March 1</strong> We are officially open for business<br />
 </li>
-<li><strong>February 13</strong> New preprint online. Read it <a href="https://www.biorxiv.org/content/10.1101/547943v1">here</a><br />
+<li><strong>February 13</strong> New preprint online. Read it <a
+href="https://www.biorxiv.org/content/10.1101/547943v1">here</a><br />
 </li>
-<li><strong>December 20</strong> Open PhD student position in the lab <a href="files/phd_offer2018.pdf">read more</a><br />
+<li><strong>December 20</strong> Open PhD student position in the lab <a
+href="files/phd_offer2018.pdf">read more</a><br />
 </li>
 <li><strong>November 27</strong> lab website comes to life</li>
 </ul>
