--- a/people.html
+++ b/people.html
@@ -13,7 +13,7 @@
 
 <title>Current lab members</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -152,6 +152,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="style.css" type="text/css" />
 
 
@@ -176,6 +177,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -328,7 +332,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -404,7 +408,8 @@ $(document).ready(function () {
 <div style="float: left">
 <p><a href="https://twitter.com/mgstetter"><img src="own_images/Twitter_logo_blue.png" style="width: 20px;"></a><a href="http://mstetter.github.io"><img src="own_images/Home_icon_black.png" style="width: 20px;"></a><a href="https://scholar.google.de/citations?user=yYKVZQQAAAAJ&hl=en"><img src="own_images/scholar.png" style="width: 30px;"></a><a href="http://github.com/mstetter"><img src="own_images/GitHub-Mark-32px.png" style="width:20px;"></a></p>
 </div>
-<p>Markus is group leader in the Institute for Plant Sciences at the University of Cologne <a href="about.html">read more</a></p>
+<p>Markus is group leader in the Institute for Plant Sciences at the
+University of Cologne <a href="about.html">read more</a></p>
 <!-- break -->
 <p><br> <br> <br> <!-- break --></p>
 <div id="postdoc" class="section level2">
@@ -416,7 +421,9 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Akanksha studies the introduction history of grain amaranth to India and the sources of adaptive alleles. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Akanksha studies the introduction history of grain amaranth to India
+and the sources of adaptive alleles. <!-- break --> <br> <br> <br> <br>
+<br> <br> <br></p>
 </div>
 <div id="phd-students" class="section level2">
 <h2>PhD students</h2>
@@ -427,7 +434,9 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Corbinian is a PhD student studying the genetic landscape of grain amaranth and how it changed during the repeated domestication. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Corbinian is a PhD student studying the genetic landscape of grain
+amaranth and how it changed during the repeated domestication.
+<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/jose.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -435,7 +444,10 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>José is a PhD student studying gene flow between grain amaranth species and their wild relatives to reconstruct the domestication history of the crop. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>José is a PhD student studying gene flow between grain amaranth
+species and their wild relatives to reconstruct the domestication
+history of the crop. <!-- break --> <br> <br> <br> <br> <br> <br>
+<br></p>
 <div style="float: left">
 <p><img src="own_images/people/kerstin.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -443,7 +455,9 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Kerstin is a PhD student and part of the CEPLAS graduate school. Kerstin employs ancestral recombination graphs to study the evolution of maize <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Kerstin is a PhD student and part of the CEPLAS graduate school.
+Kerstin employs ancestral recombination graphs to study the evolution of
+maize <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/SusanneVollmer.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -451,7 +465,12 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Susanne is a PhD student and part of the CEPLAS graduate school in collaboration with the <a href="https://www.ceplas.eu/en/research/people/dr-goetz-hensel">Hensel lab at HHU</a>. Susanne advances various molecular methods for amaranth and dissects the regulation of seed color adaptation. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Susanne is a PhD student and part of the CEPLAS graduate school in
+collaboration with the <a
+href="https://www.ceplas.eu/en/research/people/dr-goetz-hensel">Hensel
+lab at HHU</a>. Susanne advances various molecular methods for amaranth
+and dissects the regulation of seed color adaptation. <!-- break -->
+<br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="lab-manager" class="section level2">
 <h2>Lab manager</h2>
@@ -462,7 +481,8 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Roswitha runs the wet lab and does the pipetting magic <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Roswitha runs the wet lab and does the pipetting magic <!-- break -->
+<br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="master-students" class="section level2">
 <h2>Master students</h2>
@@ -473,7 +493,9 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Tom is a master student studying the the amaranth transcriptome and the involvement of transcriptomic changes in metabolic pathways <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Tom is a master student studying the the amaranth transcriptome and
+the involvement of transcriptomic changes in metabolic pathways
+<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/Julio.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -481,7 +503,10 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Julio is a master student working on the molecular validation of domestication genes in grain amaranth and the conservation of the MBW regulation network. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Julio is a master student working on the molecular validation of
+domestication genes in grain amaranth and the conservation of the MBW
+regulation network. <!-- break --> <br> <br> <br> <br> <br> <br>
+<br></p>
 <!-- break
 <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
@@ -497,7 +522,9 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Hurmain is a bachelor student ideintifing species diagnostic markers for the Amaranthus genus. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Hurmain is a bachelor student ideintifing species diagnostic markers
+for the Amaranthus genus. <!-- break --> <br> <br> <br> <br> <br> <br>
+<br></p>
 </div>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
@@ -508,7 +535,9 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Leonie is a student helper in the lab evaluating the phenotypic diversity of a grain amaranth reference population. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Leonie is a student helper in the lab evaluating the phenotypic
+diversity of a grain amaranth reference population. <!-- break --> <br>
+<br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/Laura_Merx.JPG" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -516,7 +545,9 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Krzysztov is a CEPLAS rotation student exploring Oxford Nanopore sequencing to identify structural variation in grain amaranth <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Krzysztov is a CEPLAS rotation student exploring Oxford Nanopore
+sequencing to identify structural variation in grain amaranth
+<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <!-- break 
 **Ahad Kazmi** 
 <div style="float: left">
@@ -543,7 +574,8 @@ Ahad is a biochemistry master student wroking on long read sequencing in amarant
 <div style="float: left">
 
 </div>
-<p>Contact us if you are interested in joining the lab. <a href="mailto:mgstetter@gmail.com">contact us</a></p>
+<p>Contact us if you are interested in joining the lab. <a
+href="mailto:mgstetter@gmail.com">contact us</a></p>
 <!-- break -->
 <p><br> <br> <br> <br> <br> <!-- break --></p>
 </div>
