--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <title>Markus Stetter</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -152,6 +152,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="style.css" type="text/css" />
 
 
@@ -176,6 +177,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -328,7 +332,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -399,17 +403,24 @@ $(document).ready(function () {
 <div id="research-experience" class="section level2">
 <h2>Research experience</h2>
 <ul>
-<li>From 2019 Group leader - Botanical Institute, University of Cologne, Germany<br />
+<li>From 2019 Group leader - Botanical Institute, University of Cologne,
+Germany<br />
 <a href="https://www.cropevolution.org/">Stetter lab</a><br />
 </li>
-<li>2017 -2019 Postdoc - Department of Plant Sciences, University of California Davis, USA<br />
+<li>2017 -2019 Postdoc - Department of Plant Sciences, University of
+California Davis, USA<br />
 <a href="http://rilab.org">Ross-Ibarra lab</a></li>
-<li>11/2016 - 01/2017 Research Associate - Crop Biodiversity and Breeding Informatics, University of Hohenheim, Germany<br />
+<li>11/2016 - 01/2017 Research Associate - Crop Biodiversity and
+Breeding Informatics, University of Hohenheim, Germany<br />
 <a href="http://evoplant.uni-hohenheim.de">Schmid lab</a></li>
-<li>2013 - 2016 PhD student - Crop Biodiversity and Breeding Informatics, University of Hohenheim, Germany<br />
+<li>2013 - 2016 PhD student - Crop Biodiversity and Breeding
+Informatics, University of Hohenheim, Germany<br />
 <a href="http://evoplant.uni-hohenheim.de">Schmid lab</a></li>
-<li>2011 - 2013 Master student - Institute of Plant Nutrition, University of Hohenheim, Germany<br />
-<a href="https://scholar.google.de/citations?user=C9ANgTkAAAAJ&amp;hl=en">Ludewig lab</a></li>
+<li>2011 - 2013 Master student - Institute of Plant Nutrition,
+University of Hohenheim, Germany<br />
+<a
+href="https://scholar.google.de/citations?user=C9ANgTkAAAAJ&amp;hl=en">Ludewig
+lab</a></li>
 </ul>
 </div>
 <div id="education" class="section level2">
