--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 <title>Contact Us</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -152,6 +152,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="style.css" type="text/css" />
 
 
@@ -176,6 +177,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -328,7 +332,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -401,7 +405,8 @@ Botanical Institute<br />
 Biozentrum<br />
 Zülpicher Str. 47b<br />
 50674 Cologne/Germany<br />
-mail: <a href="mailto:m.stetter@uni-koeln.de">m.stetter(a)uni-koeln.de</a><br />
+mail: <a
+href="mailto:m.stetter@uni-koeln.de">m.stetter(a)uni-koeln.de</a><br />
 twitter: <a href="https://twitter.com/mgstetter">@mgstetter</a><br />
 web: <a href="https://cropevolution.org">cropevolution.org</a></p>
 <!-- Global site tag (gtag.js) - Google Analytics -->
