--- a/impressum.html
+++ b/impressum.html
@@ -13,7 +13,7 @@
 
 <title>Impressum</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -152,6 +152,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="style.css" type="text/css" />
 
 
@@ -176,6 +177,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -328,7 +332,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -396,29 +400,100 @@ $(document).ready(function () {
 
 <p>Angaben gemäß § 5 TMG</p>
 <p>Markus Stetter Zülpicher Str. 47b 50674 Cologne/Germany</p>
-<p>Vertreten durch: Markus Stetter Kontakt: Telefon: +49 221 4703906 E-Mail: m.stetter[at]uni-koeln.de</p>
+<p>Vertreten durch: Markus Stetter Kontakt: Telefon: +49 221 4703906
+E-Mail: m.stetter[at]uni-koeln.de</p>
 <div id="haftungsausschluss" class="section level2">
 <h2>Haftungsausschluss:</h2>
 <div id="haftung-für-inhalte" class="section level3">
 <h3>Haftung für Inhalte</h3>
-<p>Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
+<p>Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für
+die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir
+jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7
+Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen
+Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als
+Diensteanbieter jedoch nicht verpflichtet, übermittelte oder
+gespeicherte fremde Informationen zu überwachen oder nach Umständen zu
+forschen, die auf eine rechtswidrige Tätigkeit hinweisen.
+Verpflichtungen zur Entfernung oder Sperrung der Nutzung von
+Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt.
+Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der
+Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von
+entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend
+entfernen.</p>
 </div>
 <div id="haftung-für-links" class="section level3">
 <h3>Haftung für Links</h3>
-<p>Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
+<p>Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren
+Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden
+Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten
+Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten
+verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der
+Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte
+waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente
+inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete
+Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden
+von Rechtsverletzungen werden wir derartige Links umgehend
+entfernen.</p>
 </div>
 <div id="urheberrecht" class="section level3">
 <h3>Urheberrecht</h3>
-<p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
+<p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen
+Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung,
+Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der
+Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des
+jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite
+sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.
+Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden,
+werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte
+Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine
+Urheberrechtsverletzung aufmerksam werden, bitten wir um einen
+entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden
+wir derartige Inhalte umgehend entfernen.</p>
 </div>
 <div id="datenschutz" class="section level3">
 <h3>Datenschutz</h3>
-<p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder eMail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben. Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich. Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen. Die Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa durch Spam-Mails, vor.</p>
+<p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe
+personenbezogener Daten möglich. Soweit auf unseren Seiten
+personenbezogene Daten (beispielsweise Name, Anschrift oder
+eMail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf
+freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche
+Zustimmung nicht an Dritte weitergegeben. Wir weisen darauf hin, dass
+die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail)
+Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor
+dem Zugriff durch Dritte ist nicht möglich. Der Nutzung von im Rahmen
+der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur
+Übersendung von nicht ausdrücklich angeforderter Werbung und
+Informationsmaterialien wird hiermit ausdrücklich widersprochen. Die
+Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im
+Falle der unverlangten Zusendung von Werbeinformationen, etwa durch
+Spam-Mails, vor.</p>
 </div>
 <div id="google-analytics" class="section level3">
 <h3>Google Analytics</h3>
-<p>Diese Website benutzt Google Analytics, einen Webanalysedienst der Google Inc. (‘’Google’‘). Google Analytics verwendet sog.’‘Cookies’’, Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglicht. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieser Website (einschließlich Ihrer IP-Adresse) wird an einen Server von Google in den USA übertragen und dort gespeichert. Google wird diese Informationen benutzen, um Ihre Nutzung der Website auszuwerten, um Reports über die Websiteaktivitäten für die Websitebetreiber zusammenzustellen und um weitere mit der Websitenutzung und der Internetnutzung verbundene Dienstleistungen zu erbringen. Auch wird Google diese Informationen gegebenenfalls an Dritte übertragen, sofern dies gesetzlich vorgeschrieben oder soweit Dritte diese Daten im Auftrag von Google verarbeiten. Google wird in keinem Fall Ihre IP-Adresse mit anderen Daten der Google in Verbindung bringen. Sie können die Installation der Cookies durch eine entsprechende Einstellung Ihrer Browser Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website voll umfänglich nutzen können. Durch die Nutzung dieser Website erklären Sie sich mit der Bearbeitung der über Sie erhobenen Daten durch Google in der zuvor beschriebenen Art und Weise und zu dem zuvor benannten Zweck einverstanden.</p>
-<p><em>Impressum vom Impressum Generator der Kanzlei Hasselbach, Rechtsanwälte für Arbeitsrecht und Familienrecht</em></p>
+<p>Diese Website benutzt Google Analytics, einen Webanalysedienst der
+Google Inc. (‘’Google’‘). Google Analytics verwendet sog.’‘Cookies’’,
+Textdateien, die auf Ihrem Computer gespeichert werden und die eine
+Analyse der Benutzung der Website durch Sie ermöglicht. Die durch den
+Cookie erzeugten Informationen über Ihre Benutzung dieser Website
+(einschließlich Ihrer IP-Adresse) wird an einen Server von Google in den
+USA übertragen und dort gespeichert. Google wird diese Informationen
+benutzen, um Ihre Nutzung der Website auszuwerten, um Reports über die
+Websiteaktivitäten für die Websitebetreiber zusammenzustellen und um
+weitere mit der Websitenutzung und der Internetnutzung verbundene
+Dienstleistungen zu erbringen. Auch wird Google diese Informationen
+gegebenenfalls an Dritte übertragen, sofern dies gesetzlich
+vorgeschrieben oder soweit Dritte diese Daten im Auftrag von Google
+verarbeiten. Google wird in keinem Fall Ihre IP-Adresse mit anderen
+Daten der Google in Verbindung bringen. Sie können die Installation der
+Cookies durch eine entsprechende Einstellung Ihrer Browser Software
+verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall
+gegebenenfalls nicht sämtliche Funktionen dieser Website voll umfänglich
+nutzen können. Durch die Nutzung dieser Website erklären Sie sich mit
+der Bearbeitung der über Sie erhobenen Daten durch Google in der zuvor
+beschriebenen Art und Weise und zu dem zuvor benannten Zweck
+einverstanden.</p>
+<p><em>Impressum vom Impressum Generator der Kanzlei Hasselbach,
+Rechtsanwälte für Arbeitsrecht und Familienrecht</em></p>
 </div>
 </div>
 
