--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>Stetter lab</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -152,6 +152,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="style.css" type="text/css" />
 
 
@@ -176,6 +177,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -328,7 +332,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -394,11 +398,28 @@ $(document).ready(function () {
 </div>
 
 
-<p>Welcome to the Stetter lab in the <a href="http://www.botanik.uni-koeln.de/1634.html?&amp;L=1">Institute for Plant Sciences</a> at the <a href="https://www.uni-koeln.de/">University of Cologne</a>. We are interested in crop evolution and adaptation. We study the incomplete domestication of the South American pseudo-cereal, amaranth, and the domestication and cultivation history of maize. We use population and quantitative genetic methods to understand how wild plants became crops and how these crops spread across the globe.</p>
-<p>Read more about our <a href="research.html">research</a> and who we are on this site. If you like what we do and would like to join the lab please contact <a href="mailto:m.stetter@uni-koeln.de">Markus</a> to find out more about openings and possibilities to apply for fellowships.</p>
+<p>Welcome to the Stetter lab in the <a
+href="http://www.botanik.uni-koeln.de/1634.html?&amp;L=1">Institute for
+Plant Sciences</a> at the <a href="https://www.uni-koeln.de/">University
+of Cologne</a>. We are interested in crop evolution and adaptation. We
+study the incomplete domestication of the South American pseudo-cereal,
+amaranth, and the domestication and cultivation history of maize. We use
+population and quantitative genetic methods to understand how wild
+plants became crops and how these crops spread across the globe.</p>
+<p>Read more about our <a href="research.html">research</a> and who we
+are on this site. If you like what we do and would like to join the lab
+please contact <a href="mailto:m.stetter@uni-koeln.de">Markus</a> to
+find out more about openings and possibilities to apply for
+fellowships.</p>
 <p><img src="own_images/labcloud.png" /></p>
-<p>Our lab is also a member of the Cluster of Excellence on Plant Sciences (<a href="https://www.ceplas.eu/en/research/principal-investigators/dr-markus-stetter/">CEPLAS</a>). In this video we give some insight how we contribute to the goal of CEPLAS, “SMART Plants for Tomorrow’s Needs”</p>
-<p><a href="https://www.youtube.com/watch?v=XitwCNy9knk" title="link title"><img src="own_images/csm_Bild_Video_Stetter.png" alt="Youtube" /></a></p>
+<p>Our lab is also a member of the Cluster of Excellence on Plant
+Sciences (<a
+href="https://www.ceplas.eu/en/research/principal-investigators/dr-markus-stetter/">CEPLAS</a>).
+In this video we give some insight how we contribute to the goal of
+CEPLAS, “SMART Plants for Tomorrow’s Needs”</p>
+<p><a href="https://www.youtube.com/watch?v=XitwCNy9knk"
+title="link title"><img src="own_images/csm_Bild_Video_Stetter.png"
+alt="Youtube" /></a></p>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
 <script>
