PhD position added and People and CROP

--- a/people.html
+++ b/people.html
@@ -529,25 +529,24 @@ for the Amaranthus genus. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
 <div style="float: left">
-<p><img src="own_images/people/Leonie_Eberhard.jpeg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Leonie Eberhard</strong>
+<strong>Vincent Kovarik</strong>
 <div style="float: left">
 
 </div>
-<p>Leonie is a student helper in the lab evaluating the phenotypic
+<p>Vincent is a student helper in the lab evaluating the phenotypic
 diversity of a grain amaranth reference population. <!-- break --> <br>
 <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
-<p><img src="own_images/people/Laura_Merx.JPG" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Krzysztov Pukacz</strong>
+<strong>Anny Garces</strong>
 <div style="float: left">
 
 </div>
-<p>Krzysztov is a CEPLAS rotation student exploring Oxford Nanopore
-sequencing to identify structural variation in grain amaranth
-<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Anny is a CEPLAS rotation student exploring structural variation in
+grain amaranth <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <!-- break 
 **Ahad Kazmi** 
 <div style="float: left">
@@ -591,6 +590,12 @@ href="mailto:mgstetter@gmail.com">contact us</a></p>
 <ul>
 <li>Cátia José Neves</li>
 <li>Sabarna Bhattacharyya</li>
+<li>Kerstin Schulz</li>
+<li>Susanne Vollmer</li>
+<li>Tatiana Stead</li>
+<li>Kumsal Ecem Çolpan</li>
+<li>Laura Merx</li>
+<li>Krzysztof Pukacz</li>
 </ul>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
