--- a/reading.html
+++ b/reading.html
@@ -412,6 +412,12 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="june" class="section level3">
 <h3>June</h3>
+<div id="thursday-june-23" class="section level4">
+<h4>Thursday June 23</h4>
+<p><a href="https://www.nature.com/articles/s41467-022-31112-x">Liao, et
+al 2022</a> The 3D architecture of the pepper genome and its
+relationship to function and evolution</p>
+</div>
 <div id="thursday-june-9" class="section level4">
 <h4>Thursday June 9</h4>
 <p><a href="https://www.nature.com/articles/s41559-022-01754-7">Fu, et
