CROP and people

--- a/reading.html
+++ b/reading.html
@@ -410,6 +410,16 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="july" class="section level3">
+<h3>July</h3>
+<div id="thursday-june-28" class="section level4">
+<h4>Thursday June 28</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2022.07.15.500250v1">Hu,
+et al preprint</a> Allele-specific expression reveals multiple paths to
+highland adaptation in maize</p>
+</div>
+</div>
 <div id="june" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-23" class="section level4">
@@ -644,7 +654,7 @@ and Osborne, 2021</a> Crop origins explain variation in global
 agricultural relevance</p>
 </div>
 </div>
-<div id="july" class="section level3">
+<div id="july-1" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-29" class="section level4">
 <h4>Thursday July 29</h4>
@@ -903,7 +913,7 @@ introgression patterns in intraspecific hybrids between wild and
 domesticated barley</p>
 </div>
 </div>
-<div id="july-1" class="section level3">
+<div id="july-2" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-16" class="section level4">
 <h4>Thursday July 16</h4>
@@ -1167,7 +1177,7 @@ genomic landscape of recombination rate variation in European Aspen
 (Populus tremula)</p>
 </div>
 </div>
-<div id="july-2" class="section level3">
+<div id="july-3" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-25" class="section level4">
 <h4>Thursday July 25</h4>
