--- a/people.html
+++ b/people.html
@@ -529,7 +529,7 @@ for the Amaranthus genus. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
 <div style="float: left">
-<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/vincent_Kovarik.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Vincent Kovarik</strong>
 <div style="float: left">
@@ -538,16 +538,28 @@ for the Amaranthus genus. <!-- break --> <br> <br> <br> <br> <br> <br>
 <p>Vincent is a student helper in the lab evaluating the phenotypic
 diversity of a grain amaranth reference population. <!-- break --> <br>
 <br> <br> <br> <br> <br> <br></p>
-<div style="float: left">
-<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Anny Garces</strong>
-<div style="float: left">
-
-</div>
-<p>Anny is a CEPLAS rotation student exploring structural variation in
-grain amaranth <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <!-- break 
+
+<div style="float: left">
+<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
+</div>
+
+
+**Anny Garces** 
+<div style="float: left">
+</div>
+Anny is a CEPLAS rotation student exploring structural variation in grain amaranth
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
 **Ahad Kazmi** 
 <div style="float: left">
 </div>
@@ -596,6 +608,7 @@ href="mailto:mgstetter@gmail.com">contact us</a></p>
 <li>Kumsal Ecem Çolpan</li>
 <li>Laura Merx</li>
 <li>Krzysztof Pukacz</li>
+<li>Anny Garces</li>
 </ul>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
