People, CROP, paper

--- a/people.html
+++ b/people.html
@@ -471,6 +471,16 @@ href="https://www.ceplas.eu/en/research/people/dr-goetz-hensel">Hensel
 lab at HHU</a>. Susanne advances various molecular methods for amaranth
 and dissects the regulation of seed color adaptation. <!-- break -->
 <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Tom Winkler</strong>
+<div style="float: left">
+
+</div>
+<p>Tom is a master student studying the the amaranth transcriptome and
+the involvement of transcriptomic changes in metabolic pathways
+<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="lab-manager" class="section level2">
 <h2>Lab manager</h2>
@@ -486,16 +496,6 @@ and dissects the regulation of seed color adaptation. <!-- break -->
 </div>
 <div id="master-students" class="section level2">
 <h2>Master students</h2>
-<div style="float: left">
-<p><img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Tom Winkler</strong>
-<div style="float: left">
-
-</div>
-<p>Tom is a master student studying the the amaranth transcriptome and
-the involvement of transcriptomic changes in metabolic pathways
-<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/Julio.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -529,7 +529,7 @@ for the Amaranthus genus. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
 <div style="float: left">
-<p><img src="own_images/vincent_Kovarik.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/vincent_Kovarik.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Vincent Kovarik</strong>
 <div style="float: left">
@@ -538,7 +538,15 @@ for the Amaranthus genus. <!-- break --> <br> <br> <br> <br> <br> <br>
 <p>Vincent is a student helper in the lab evaluating the phenotypic
 diversity of a grain amaranth reference population. <!-- break --> <br>
 <br> <br> <br> <br> <br> <br></p>
-<!-- break 
+<div style="float: left">
+<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Jan Krause</strong>
+<div style="float: left">
+
+</div>
+<p>Jan is a student helper in the lab working on amaranth CMS systems.
+<!-- break --> <br> <br> <br> <br> <br> <br> <br> <!-- break 
 
 <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
@@ -574,7 +582,7 @@ Ahad is a biochemistry master student wroking on long read sequencing in amarant
 
  <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
-</div>-->
+</div>--></p>
 </div>
 <div id="joining-the-lab" class="section level2">
 <h2>Joining the lab</h2>
