--- a/reading.html
+++ b/reading.html
@@ -410,10 +410,19 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="august" class="section level3">
+<h3>August</h3>
+<div id="thursday-august-25" class="section level4">
+<h4>Thursday August 25</h4>
+<p><a href="https://www.nature.com/articles/s41467-022-31509-8">Lian, et
+al 2022</a> The megabase-scale crossover landscape is largely
+independent of sequence divergence</p>
+</div>
+</div>
 <div id="july" class="section level3">
 <h3>July</h3>
-<div id="thursday-june-28" class="section level4">
-<h4>Thursday June 28</h4>
+<div id="thursday-july-28" class="section level4">
+<h4>Thursday July 28</h4>
 <p><a
 href="https://www.biorxiv.org/content/10.1101/2022.07.15.500250v1">Hu,
 et al preprint</a> Allele-specific expression reveals multiple paths to
@@ -624,7 +633,7 @@ et al, 2021</a> An ancestral recombination graph of human, Neanderthal,
 and Denisovan genomes</p>
 </div>
 </div>
-<div id="august" class="section level3">
+<div id="august-1" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-26" class="section level4">
 <h4>Thursday August 26</h4>
@@ -1139,7 +1148,7 @@ et al 2019</a> Impact of demography on linked selection in two
 outcrossing Brassicaceae species</p>
 </div>
 </div>
-<div id="august-1" class="section level3">
+<div id="august-2" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-29" class="section level4">
 <h4>Thursday August 29</h4>
