--- a/publications.html
+++ b/publications.html
@@ -406,7 +406,7 @@ $(document).ready(function () {
 <ul>
 <li><a href="">Functional analysis of the BEACH domain gene MpSPIRRIG in
 Marchantia polymorpha</a><br />
-E Koebke, L Stephan, <strong>Markus G Stetter</strong>, M Huelskamp
+E Koebke, L Stephan, <strong>Markus G Stetter</strong> and M Huelskamp
 <em>Frontiers in Plant Science</em></li>
 </ul>
 </div>
