--- a/reading.html
+++ b/reading.html
@@ -410,6 +410,15 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="september" class="section level3">
+<h3>September</h3>
+<div id="thursday-september-1" class="section level4">
+<h4>Thursday September 1</h4>
+<p><a href="https://www.science.org/doi/10.1126/sciadv.abo5115">Bieker,
+et al 2022</a> Uncovering the genomic basis of an extraordinary plant
+invasion</p>
+</div>
+</div>
 <div id="august" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-25" class="section level4">
@@ -611,7 +620,7 @@ et al, preprint</a> Not so local: the population genetics of convergent
 adaptation in maize and teosinte</p>
 </div>
 </div>
-<div id="september" class="section level3">
+<div id="september-1" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-30" class="section level4">
 <h4>Thursday September 30</h4>
@@ -891,7 +900,7 @@ Corre et al. 2020</a> Adaptive introgression from maize has facilitated
 the establishment of teosinte as a noxious weed in Europe</p>
 </div>
 </div>
-<div id="september-1" class="section level3">
+<div id="september-2" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-24" class="section level4">
 <h4>Thursday September 24</h4>
@@ -1123,7 +1132,7 @@ sunflowers</p>
 <p>Holiday - No C.R.O.P</p>
 </div>
 </div>
-<div id="september-2" class="section level3">
+<div id="september-3" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-26" class="section level4">
 <h4>Thursday September 26</h4>
