--- a/reading.html
+++ b/reading.html
@@ -412,6 +412,14 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="september" class="section level3">
 <h3>September</h3>
+<div id="thursday-september-15" class="section level4">
+<h4>Thursday September 15</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2022.08.24.505198v1">Vourlaki,
+et al preprint</a> Detection of Domestication Signals through the
+Analysis of the Full Distribution of Fitness Effects using Forward
+Simulations and Polygenic Adaptation</p>
+</div>
 <div id="thursday-september-8" class="section level4">
 <h4>Thursday September 8</h4>
 <p><a
