--- a/reading.html
+++ b/reading.html
@@ -412,6 +412,12 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="september" class="section level3">
 <h3>September</h3>
+<div id="thursday-september-22" class="section level4">
+<h4>Thursday September 22</h4>
+<p><a href="https://www.science.org/doi/10.1126/science.abo3503">Todd,
+et al 2022</a> The genomic history and global expansion of domestic
+donkeys</p>
+</div>
 <div id="thursday-september-15" class="section level4">
 <h4>Thursday September 15</h4>
 <p><a
