--- a/reading.html
+++ b/reading.html
@@ -410,8 +410,24 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="october" class="section level3">
+<h3>October</h3>
+<div id="thursday-october-5" class="section level4">
+<h4>Thursday October 5</h4>
+<p><a
+href="https://www.science.org/doi/10.1126/science.abn5642">Exposito-Alonso,
+et al 2022</a> Genetic diversity loss in the Anthropocene</p>
+</div>
+</div>
 <div id="september" class="section level3">
 <h3>September</h3>
+<div id="thursday-september-29" class="section level4">
+<h4>Thursday September 29</h4>
+<p><a
+href="https://www.pnas.org/doi/abs/10.1073/pnas.2110245119">Lopez-Valdivia,
+et al 2022</a> Gradual domestication of root traits in the earliest
+maize from Tehuacán</p>
+</div>
 <div id="thursday-september-22" class="section level4">
 <h4>Thursday September 22</h4>
 <p><a href="https://www.science.org/doi/10.1126/science.abo3503">Todd,
@@ -620,7 +636,7 @@ al, 2021</a> Genomic evidence of human selection on Vavilovian
 mimicry</p>
 </div>
 </div>
-<div id="october" class="section level3">
+<div id="october-1" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-28" class="section level4">
 <h4>Thursday October 28</h4>
@@ -886,7 +902,7 @@ et al, preprint</a> Experimental evolution of adaptive divergence under
 varying degrees of gene flow</p>
 </div>
 </div>
-<div id="october-1" class="section level3">
+<div id="october-2" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-29" class="section level4">
 <h4>Thursday October 29</h4>
@@ -1121,7 +1137,7 @@ et al 2019</a> The Genomic Basis for Short-Term Evolution of
 Environmental Adaptation in Maize</p>
 </div>
 </div>
-<div id="october-2" class="section level3">
+<div id="october-3" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-31" class="section level4">
 <h4>Thursday October 31</h4>
