--- a/reading.html
+++ b/reading.html
@@ -412,6 +412,12 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="october" class="section level3">
 <h3>October</h3>
+<div id="thursday-october-12" class="section level4">
+<h4>Thursday October 12</h4>
+<p><a href="https://www.science.org/doi/10.1126/sciadv.abj4633">Muleta,
+et al 2022</a> The recent evolutionary rescue of a staple crop depended
+on over half a century of global germplasm exchange</p>
+</div>
 <div id="thursday-october-5" class="section level4">
 <h4>Thursday October 5</h4>
 <p><a
