--- a/index.html
+++ b/index.html
@@ -420,14 +420,14 @@ CEPLAS, “SMART Plants for Tomorrow’s Needs”</p>
 <p><a href="https://www.youtube.com/watch?v=XitwCNy9knk"
 title="link title"><img src="own_images/csm_Bild_Video_Stetter.png"
 alt="Youtube" /></a></p>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YQ1CKNGTV5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-96594188-4');
+  gtag('config', 'G-YQ1CKNGTV5');
 </script>
 
 
