--- a/research.html
+++ b/research.html
@@ -489,14 +489,14 @@ small founder populations and intense selection. We also make use of
 genomic data from doubled haploid libraries, generated from heterozygous
 maize landraces, and experimental populations to study the impact of
 negative alleles.</p>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YQ1CKNGTV5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-96594188-4');
+  gtag('config', 'G-YQ1CKNGTV5');
 </script>
 </div>
 </div>
