--- a/about.html
+++ b/about.html
@@ -431,14 +431,14 @@ lab</a></li>
 <li>2011 Guest student - Hebrew University of Jerusalem, Israel</li>
 <li>2011 BSc - University of Hohenheim, Germany</li>
 </ul>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YQ1CKNGTV5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-96594188-4');
+  gtag('config', 'G-YQ1CKNGTV5');
 </script>
 </div>
 
