--- a/publications.html
+++ b/publications.html
@@ -574,14 +574,14 @@ and response to local scarce phosphate in Arabidopsis thaliana</a><br />
 one</em></p></li>
 </ul>
 <p>*Equal contribution</p>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YQ1CKNGTV5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-96594188-4');
+  gtag('config', 'G-YQ1CKNGTV5');
 </script>
 </div>
 </div>
