--- a/people.html
+++ b/people.html
@@ -516,36 +516,34 @@ regulation network. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div id="bachelor-students" class="section level2">
 <h2>Bachelor students</h2>
 <div style="float: left">
-<p><img src="own_images/people/Hurmain_Ahmad.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/Vivien_Pluekthun.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Hurmain Ahmad</strong>
+<strong>Vivien Pluekthun</strong>
 <div style="float: left">
 
 </div>
-<p>Hurmain is a bachelor student ideintifing species diagnostic markers
-for the Amaranthus genus. <!-- break --> <br> <br> <br> <br> <br> <br>
-<br></p>
+<p>Vivien studies genetic determinants of germination in grain amaranth.
+<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
 <div style="float: left">
-<p><img src="own_images/people/vincent_Kovarik.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Vincent Kovarik</strong>
-<div style="float: left">
-
-</div>
-<p>Vincent is a student helper in the lab evaluating the phenotypic
-diversity of a grain amaranth reference population. <!-- break --> <br>
-<br> <br> <br> <br> <br> <br></p>
-<div style="float: left">
-<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/Jan_Krause.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Jan Krause</strong>
 <div style="float: left">
 
 </div>
-<p>Jan is a student helper in the lab working on amaranth CMS systems.
+<p>Jan is the seed wizard in the lab. <!-- break --> <br> <br> <br> <br>
+<br> <br></p>
+<div style="float: left">
+<p><img src="own_images/people/Emily_Rywelski.JPG" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Emily Rywelski</strong>
+<div style="float: left">
+
+</div>
+<p>Emily works on pollen nucleous extraction and cell sorting.
 <!-- break --> <br> <br> <br> <br> <br> <br> <br> <!-- break 
 
 <div style="float: left">
@@ -602,7 +600,7 @@ href="mailto:mgstetter@gmail.com">contact us</a></p>
 <h2>Lab alumni</h2>
 <ul>
 <li>Sophie Schreiner (BSc student)</li>
-<li>Tom Winkler (BSc student)</li>
+<li>Tom Winkler (BSc, MSc student)</li>
 </ul>
 </div>
 <div id="past-visitors" class="section level2">
