--- a/reading.html
+++ b/reading.html
@@ -415,9 +415,10 @@ href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="thursday-november-17" class="section level4">
 <h4>Thursday November 17</h4>
 <p><a
-href="https://academic.oup.com/mbe/article/39/6/msac078/6564429">Muleta,
-et al 2022</a> Transposon Insertion Drove the Loss of Natural Seed
-Shattering during Foxtail Millet Domestication</p>
+href="https://www.biorxiv.org/content/10.1101/2022.10.19.512958v1.full">Pucker,
+et al preprint</a> Evolutionary blocks to anthocyanin accumulation and
+the loss of an anthocyanin carrier protein in betalain-pigmented
+Caryophyllales</p>
 </div>
 </div>
 <div id="october" class="section level3">
