--- a/reading.html
+++ b/reading.html
@@ -412,6 +412,13 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="november" class="section level3">
 <h3>November</h3>
+<div id="thursday-november-24" class="section level4">
+<h4>Thursday November 24</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2022.10.13.511672v1">Díaz-Valenzuela,
+et al preprint</a> The role of non-additive gene action on gene
+expression variation in plant domestication</p>
+</div>
 <div id="thursday-november-17" class="section level4">
 <h4>Thursday November 17</h4>
 <p><a
