--- a/reading.html
+++ b/reading.html
@@ -412,6 +412,18 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="january" class="section level3">
 <h3>January</h3>
+<div id="thursday-january-26" class="section level4">
+<h4>Thursday January 26</h4>
+<p><a
+href="https://www.annualreviews.org/doi/10.1146/annurev-arplant-071221-090809">James
+, et al 2022</a> Replicated Evolution in Plants</p>
+</div>
+<div id="thursday-january-19" class="section level4">
+<h4>Thursday January 19</h4>
+<p><a href="https://www.pnas.org/doi/10.1073/pnas.2203228120">Opedal ,
+et al 2022</a> Evolvability and trait function predict phenotypic
+divergence of plant populations</p>
+</div>
 <div id="thursday-january-12" class="section level4">
 <h4>Thursday January 12</h4>
 <p><a
