CROP and Yuna pic

--- a/people.html
+++ b/people.html
@@ -455,10 +455,9 @@ history of the crop. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div style="float: left">
 
 </div>
-<p>Julio is a master student working on the molecular validation of
-domestication genes in grain amaranth and the conservation of the MBW
-regulation network. <!-- break --> <br> <br> <br> <br> <br> <br>
-<br></p>
+<p>Julio is working on the molecular validation of domestication genes
+in grain amaranth and the conservation of the MBW regulation network.
+<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/kerstin.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -489,11 +488,11 @@ and dissects the regulation of seed color adaptation. <!-- break -->
 <div style="float: left">
 
 </div>
-<p>Tom is a master student studying the the amaranth transcriptome and
-the involvement of transcriptomic changes in metabolic pathways
+<p>Tom is a PhD student studying amaranth domestication and the
+involvement of transcriptomic changes in metabolic pathways
 <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
-<p><img src="own_images/people/yuna.png" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/Yuna_Zhang.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Yuna Zhang</strong>
 <div style="float: left">
