--- a/reading.html
+++ b/reading.html
@@ -412,6 +412,12 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="febraury" class="section level3">
 <h3>Febraury</h3>
+<div id="thursday-febraury-23" class="section level4">
+<h4>Thursday Febraury 23</h4>
+<p><a href="https://www.science.org/doi/10.1126/science.adf1323">Liang
+et al., 2023</a> Taxon-specific, phased siRNAs underlie a speciation
+locus in monkeyflowers</p>
+</div>
 <div id="thursday-febraury-9" class="section level4">
 <h4>Thursday Febraury 9</h4>
 <p><a
