--- a/reading.html
+++ b/reading.html
@@ -412,13 +412,26 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="march" class="section level3">
 <h3>March</h3>
-<div id="thursday-march-9" class="section level4">
-<h4>Thursday March 9</h4>
+<div id="thursday-march-23" class="section level4">
+<h4>Thursday March 23</h4>
 <p><a
 href="https://www.biorxiv.org/content/10.1101/2023.02.17.528989v1">Soudi
 et al., preprint</a> Repeatability of adaptation in sunflowers: genomic
 regions harbouring inversions also drive adaptation in species lacking
 an inversion</p>
+</div>
+<div id="thursday-march-16" class="section level4">
+<h4>Thursday March 16</h4>
+<p><a href="https://onlinelibrary.wiley.com/doi/10.1111/mec.16454">Zhong
+et al., 2022</a> Hard versus soft selective sweeps during domestication
+and improvement in soybean</p>
+<p><a href="https://www.nature.com/articles/s41437-022-00575-5">Jensen
+et al., 2023</a> Population genetic concerns related to the
+interpretation of empirical outliers and the neglect of common
+evolutionary processes</p>
+<p><a href="https://www.nature.com/articles/s41437-023-00605-w">Zhong et
+al., 2023</a> Wild progenitors provide a sound baseline model for
+evolutionary analysis of domesticated crop species</p>
 </div>
 </div>
 <div id="february" class="section level3">
